@@ -1,5 +1,12 @@
                         Dear Emacs, please make this -*-Text-*- mode!
 
+                CHANGES IN tm VERSION 0.3-4
+
+NEW FEATURES
+
+    o   The readNewsgroup() reader function can now be configured for
+        custom date formats (via the DateFormat argument).
+
                 CHANGES IN tm VERSION 0.3-3
 
 NEW FEATURES
